Complete Echo Renamer MVP with AI-powered file renaming
- Implement drag-and-drop file upload with support for PDF, DOCX, images, audio
- Add AI-powered filename generation using GPT-4o-mini via Echo
- Create interactive preview table with editable suggestions
- Build content extraction API routes (PDF, DOCX, text, images)
- Add LLM proposal API with smart naming policy (doctype-entity-topic-date)
- Implement ZIP download and CSV export functionality
- Add Echo platform integration for auth and billing
- Include confidence scoring and AI rationale for each suggestion
- Add duplicate resolution with version numbering
- Update branding with custom icon and OpenGraph tags
- Add comprehensive documentation (README, SETUP)

--- a/file-renamer/package.json
+++ b/file-renamer/package.json
@@ -10,6 +10,7 @@
     "postinstall": "npm dedupe || true"
   },
   "dependencies": {
+    "@ai-sdk/openai": "2.0.16",
     "@ai-sdk/react": "2.0.17",
     "@merit-systems/echo-next-sdk": "0.0.24",
     "@merit-systems/echo-react-sdk": "1.0.33",
@@ -23,15 +24,18 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "ai": "5.0.19",
-    "@ai-sdk/openai": "2.0.16",
     "autonumeric": "^4.10.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.542.0",
+    "mammoth": "^1.11.0",
     "next": "15.5.2",
+    "pdf-parse": "^2.2.16",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-syntax-highlighter": "^15.6.6",
     "shiki": "^3.12.2",
     "streamdown": "^1.2.0",
@@ -44,6 +48,7 @@
     "@next/eslint-plugin-next": "^15.5.3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "^15.5.13",
