--- a/file-renamer/package.json
+++ b/file-renamer/package.json
@@ -32,6 +32,7 @@
     "lucide-react": "^0.542.0",
     "mammoth": "^1.11.0",
     "next": "15.5.2",
+    "next-themes": "^0.4.6",
     "pdf-parse": "^2.2.16",
     "react": "19.1.0",
     "react-dom": "19.1.0",
