--- a/file-renamer/package.json
+++ b/file-renamer/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@vercel/blob": "^2.0.0",
     "ai": "5.0.19",
     "autonumeric": "^4.10.9",
     "class-variance-authority": "^0.7.1",
