--- a/file-renamer/vercel.json
+++ b/file-renamer/vercel.json
@@ -1,7 +1,6 @@
 {
-  "buildCommand": "npm run build",
   "functions": {
-    "api/**/*.ts": {
+    "src/app/api/**/*.ts": {
       "maxDuration": 60
     }
   }
