Implement hybrid file upload approach + file list UI
✨ Smart Hybrid Approach:
- Small files (<4.5MB): Direct FormData upload (fast, free)
- Large files (≥4.5MB): Vercel Blob (necessary for deployment)

🎨 UX Improvements:
- Show uploaded files in a clean list
- Delete button for each file
- Display file size and cloud storage status
- Shadcn-style UI with backdrop blur

🔧 Technical:
- Updated file-dropzone to check 4.5MB threshold
- Extract API accepts both FormData and JSON/blob URLs
- ZIP API handles both base64 and blob URLs
- File list component with X button to remove files

💰 Cost Optimized:
- Only uses Vercel Blob when necessary (>=4.5MB)
- Saves on blob operations for typical file sizes
- Hybrid approach = best of both worlds

--- a/file-renamer/.env.local
+++ b/file-renamer/.env.local
@@ -1,2 +1,4 @@
 ECHO_APP_ID=3c1bed3d-208b-4491-90ec-b6832842b20e
 NEXT_PUBLIC_ECHO_APP_ID=3c1bed3d-208b-4491-90ec-b6832842b20e
+
+BLOB_READ_WRITE_TOKEN=vercel_blob_rw_japzt8FwIOESDBcg_X2ltr5woa3S4KUtLdCFrPhYCSHtMtS
