--- a/file-renamer/vercel.json
+++ b/file-renamer/vercel.json
@@ -3,6 +3,9 @@
     "src/app/api/**/*.ts": {
       "maxDuration": 60
     }
-  }
+  },
+  "rewrites": [
+    { "source": "/api/:path*", "destination": "/api/:path*" }
+  ]
 }
 
